--- a/style.css
+++ b/style.css
@@ -30,44 +30,87 @@
 .blue {
     color: blue;
 }
-header {
-    text-align: center;
-    background:#9A0909;
+body {
+    background: #990909;
+    font-size: 18px;
 }
-.image {
-    width: 70%;
+.wrapper {
+    width: 951px;
+    margin: 0 auto;
+}
+.header {
+    margin-bottom: 5px;
+}
+.header-image {
+    display: block;
+    margin: 0 auto;
+}
+.header-menu ul li {
+    float: left;
 }
 
-nav {
+.header-menu ul li img{
+    margin: 0 42px;
+}
+.header-menu ul li p {
+    color: #fff;
+    text-align: center;
+    padding: 6px 0;
+}
+.header-menu {
+    padding-top: 20px;
     background: black;
 }
-.menu {
-    list-style-type: none;
-    margin-top: 0% ;
-    padding: 0;
-    padding-top: 20px;
+
+.aside-left {
+    width: 200px;
+    height: 290px;
+    background-color: #7d0909;
+    float: left;
 }
-.menu li {
-    display: inline-block;
-    padding-block-start: 10px;
-    padding-inline: 60px;
-  }
-  a {
-      color: white;
-      text-decoration: none;
-  }
-  .footbackgr {
-      background-color:rgb(255, 123, 0);
-      text-align: center;
-      color: white;
-  }
-  .left {
-      display:inline-block;
-  }
-  .center {
-      display:inline-block;
-  }
-  .right {
-    display:inline-block;
-  }
- 
+.aside-left ul li a {
+    color: #e95b11;
+}
+.aside-left ul li {
+    margin-bottom: 23px;
+}
+.main-content {
+    width: 585px;
+}
+.main-content p {
+    padding: 22px 0 3px;
+    color: white;
+}
+.main-content {
+    float: left;
+}
+.aside-right {
+    width: 155px;
+    float: right;
+    background: #e3dddd;
+}
+.aside-right_title {
+    background: #bdbdbd;
+    text-align: center;
+    margin-bottom: 9px;
+}
+.aside-right hr {
+    width: 78px;
+}
+.aside-right hr {
+    margin-bottom: 23px;
+}
+.aside-right article {
+    padding-bottom: 23px;
+}
+.aside-right article:last-child {
+    padding-bottom: 0;
+}
+.footer {
+    background: #e95b11;
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+    padding: 3px 0;
+    margin-top: 30px;
+}
